# leetcode-problems

./: .gitignore  LICENSE  README.md
lc-python/: README.md  justfile  pyproject.toml
lc-python/lc_python/codint/coding_practice/: n0042_trapping_rain_water.py  n0048_rotate_image.py
lc-python/tests/codint/coding_practice/: test_rotate_image.py  test_trapping_rain_water.py  test_two_sum.py  test_zigzag_conversion.py
lc-python/tests/codint/interviews/: test_solution_interview_01.py  test_solution_interview_02.py  test_solution_interview_03.py  test_solution_interview_05.py  test_solution_interview_07.py  test_solution_interview_08.py
lc-python/tests/codint/mandatory/: test_solution_binary_tree_algorithms.py  test_solution_pythonic_python.py  test_solution_search.py  test_solution_search_algorithms.py
python/: justfile  pyproject.toml
python/src/coding_interviews/coding_practice/: n0001_two_sum.py  (+9 more)
python/src/leetcode_problems/: n0003_longest_substring_without_repeating_characters_.py  n0013_roman_to_integer.py  n0014_longest_common_prefix.py  n0021_merge_two_sorted_lists.py  n0215_kth_largest_element_in_an_array.py  n0771_jewels_and_stones.py  n1431_kids_with_greatest_number_of_candies.py  n1470_shuffle_the_array.py  n1480_running_sum_of_1d_array.py  n1512_number_of_good_pairs.py  n1603_design_parking_system.py  n1672_richest_customer_wealth.py  n2011_final_value_of_variable_after_performing_operations.py  n2114_maximum_number_of_words_found_in_sentences.py  n2160_minimum_sum_of_four_digit_number_after_splitting_digits.py  n2236_root_equals_sum_of_children.py
(+46 files in other folders)
