[tool.poetry]
name = "lc-python"
version = "0.1.0"
description = ""
authors = ["Henry Rocha <henryrocha@protonmail.com>"]
readme = "README.md"
packages = [{include = "lc_python"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
